# GRECKO

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROVENANCE.md  README.md  SECURITY.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.aegisnet/: state.json
.github/workflows/: ci.yml  pages.yml
.grecko/: state.json
.grecko-site/: iterations.json
docs/: ADR-000.md  ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-005b.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md  ADR-011.md  ADR-012.md  ADR-013.md  DEPLOYMENT.md
eval/: __init__.py  decentralized.py  metrics.py  monte_carlo.py  runner.py
eval/scenarios/: baseline.yaml
grecko/: __init__.py  cli.py
league/: __init__.py  blue.py  coevolution.py  diversity.py  es.py  export.py  fitness.py  league.py  policy.py
learn/checkpoints/: intent_mlp.npz
learn/intent/: doctrines.py  features.py  model.py  predictor.py  train.py
proto/: assignment.schema.json  comms.schema.json  effector.schema.json  event.schema.json  intent.schema.json  sensor_report.schema.json  threat_assessment.schema.json  track.schema.json
s2r/: __init__.py  episodes.py  gap.py  gates.py  robustness.py  sensitivity.py
sim/: run.py
sim/alloc/: __init__.py  economic_mdp.py  greedy.py  interface.py  oracle_lp.py  types.py
sim/bridge/: __init__.py  scenario.py  server.py  state.py
sim/classify/: __init__.py  classifier.py  features.py  (+1 more)
site/: DESIGN-NOTES.md  index.html
tools/: make_demo_gif.py  make_figures.py  verify_invariants.py
viz/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+57 files in other folders)
